# 3d-nca

./: .gitignore  LICENSE  LOCAL_SETUP.md  README.md  TODO.md  conda_env.yml  environment.yml  pyproject.toml
assets/donut/: materials.mtl
blender/: __init__.py  client.py  operators.py  panels.py  properties.py  protocol.py  voxel_utils.py
blender/nca3d/: __init__.py  client.py  operators.py  panels.py  protocol.py  voxel_utils.py
documentation/: README.md
documentation/add-on/: README.md
documentation/docs/: conf.py  index.rst
documentation/docs/modules/: core.rst  server.rst
documentation/excel-at-fit/: bibliography.bib
documentation/excel@fit/: poster_commentary.tex
documentation/thesis/: 3d-nca-01-kapitoly-chapters-en.tex  3d-nca-20-literatura-bibliography.bib  3d-nca-30-prilohy-appendices-en.tex  3d-nca.tex  Makefile
nca3d/: __init__.py
nca3d/core/: grid.py  nca_model.py  perception.py  schedule.py  update.py
nca3d/core/runners/: base.py  default.py  regeneration.py
nca3d/io/: __init__.py
nca3d/server/: __init__.py  app.py  trainer.py
nca3d/viz/: __init__.py  slice_mpl.py
notebooks/: 01_basic_functionality.ipynb  01_initial_test.ipynb  01_test.ipynb  01_test_notebook.ipynb  02_multi_step_sphere_training.ipynb  02_sphere_training_alpha.ipynb  03_donut_model_training.ipynb  03_donut_training_alpha.ipynb  04_donut_training_color.ipynb  04_donut_training_rgba.ipynb  colab_run_01.py  colab_run_02.py  colab_run_04.py  colab_run_chess.py  colab_run_ngrok.py  inference_plot.py  kaggle_run_creature.ipynb  kaggle_run_creature_final.ipynb  kaggle_run_moprh.ipynb
scripts/: plot_loss.py  plot_loss_phased.py
src/: __init__.py
src/core/: __init__.py  cell.py  grid.py  nca_model.py  perception.py  runner.py  runtime.py  schedule.py  update.py
src/core/runners/: __init__.py  base.py  default.py  regeneration.py
src/io/: __init__.py  object_converter.py
src/server/: __init__.py  app.py  logger.py  protocol.py  schedule.py  server.py  trainer.py
src/viz/: __init__.py  slice.py  slice_mpl.py  utils.py  volume_mpl.py  volume_pv.py
tests/: test_core.py  test_protocol_schedule.py  test_runner_validation.py  test_schedule_custom_events.py  test_server_client.py
