[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "3d-nca"
version = "0.1.0"
description = "Modular 3D Neural Cellular Automata in PyTorch"
readme = "README.md"
authors = ["Michal Repcik <michalrepcik9@gmail.com>"]
license = "MIT"
homepage = "https://github.com/rm-a0/3d-nca"
repository = "https://github.com/rm-a0/3d-nca"
keywords = ["neural-cellular-automata", "3d", "pytorch", "generative"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "src" }]

# ------------------------------------------------------------------
# Core runtime dependencies
# ------------------------------------------------------------------
[tool.poetry.dependencies]
python = "^3.11"
torch = "2.5.1"
torchvision = "0.20.1"
torchaudio = "2.5.1"
numpy = "2.0.1"
matplotlib = "3.10.6"
tqdm = "4.67.1"
pyvista = { version = "0.46.4", extras = ["all"] }
wandb = "0.22.3"
# ---- Jupyter / notebook ecosystem ----
jupyter = "1.1.1"
jupyterlab = "4.4.7"
notebook = "7.4.5"
ipywidgets = "8.1.7"
# ---- scientific / viz ----
imageio = "2.37.0"
meshio = "5.3.5"
cmcrameri = "1.9"
cmocean = "4.0.3"
colorcet = "3.1.0"
pooch = "1.8.2"
scikit-image = "^0.24"
# ---- utilities ----
aiohttp = "3.13.2"
aiosignal = "1.4.0"
annotated-types = "0.7.0"
arrow = "1.4.0"
click = "8.3.0"
gitpython = "3.1.45"
iniconfig = "2.3.0"
isort = "7.0.0"
lark = "1.3.1"
markdown-it-py = "4.0.0"
mdurl = "0.1.2"
more-itertools = "10.8.0"
msgpack = "1.1.2"
multidict = "6.7.0"
mypy = "1.18.2"
mypy-extensions = "1.1.0"
pathspec = "0.12.1"
pluggy = "1.6.0"
propcache = "0.4.1"
protobuf = "6.33.0"
pydantic = "2.12.3"
pydantic-core = "2.41.4"
pytest = "8.4.2"
pytokens = "0.2.0"
rich = "14.2.0"
scooby = "0.10.2"
sentry-sdk = "2.43.0"
simpervisor = "1.0.0"
smmap = "5.0.2"
trame = "3.12.0"
trame-client = "3.11.2"
trame-common = "1.0.1"
trame-server = "3.8.1"
trame-vtk = "2.10.0"
trame-vuetify = "3.1.0"
typing-inspection = "0.4.2"
tzdata = "2025.2"
uri-template = "1.3.0"
vtk = "9.5.2"
webcolors = "24.11.1"
wslink = "2.5.0"
yarl = "1.22.0"
# ---- extra low-level (optional) ----
aiohappyeyeballs = "2.6.1"
fqdn = "1.5.1"
frozenlist = "1.8.0"
gitdb = "4.0.12"
isoduration = "20.11.0"
jsonpointer = "3.0.0"
jupyter-server-proxy = "4.4.0"
rfc3987-syntax = "1.1.0"

# ------------------------------------------------------------------
# Development / tooling
# ------------------------------------------------------------------
trimesh = "^4.10.0"
vedo = "^2025.5.4"
[tool.poetry.group.dev.dependencies]
black = "^25.9"
isort = "^7.0"
mypy = "^1.18"
pytest = "^8.4"
pytest-cov = "^5.0"
pre-commit = "^3.8"
ruff = "^0.6"

# ------------------------------------------------------------------
# Tool configurations 
# ------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
force_single_line = false
known_first_party = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E", "W", "F", "I", "UP", "B", "C4", "PIE", "T20",
    "PYI", "PT", "Q", "RET", "SIM", "ARG", "PTH", "PL"
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true