[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nca3d"
version = "0.1.0"
description = "Modular 3D Neural Cellular Automata in PyTorch"
readme = "README.md"
authors = [{name = "Michal Repcik", email = "michalrepcik9@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["neural-cellular-automata", "3d", "pytorch", "generative"]

# Core runtime dependencies (minimal)
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Visualization dependencies
viz = [
    "matplotlib>=3.7",
    "pyvista>=0.40",
]

# 3D mesh I/O dependencies
io = [
    "trimesh>=4.0",
]

# Server dependencies
server = []

# All optional features
all = [
    "nca3d[viz,io]",
]

# Development dependencies
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.3",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/rm-a0/3d-nca"
Repository = "https://github.com/rm-a0/3d-nca"

[tool.setuptools.packages.find]
where = ["."]
include = ["nca3d*"]

# ------------------------------------------------------------------
# Tool configurations
# ------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
force_single_line = false
known_first_party = ["nca3d"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E", "W", "F", "I", "UP", "B", "C4", "PIE", "T20",
    "PYI", "PT", "Q", "RET", "SIM", "ARG", "PTH", "PL"
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true